
	- A much improved citation() function which also has a package
	  argument.  By default the citation is auto-generated from
	  the package DESCRIPTION, the file 'inst/CITATION' can be
	  used to override this, see help(citation) and
	  help(citEntry).

	- sessionInfo() can be used to include version information about
	  R and R packages in text or LaTeX documents.


DOCUMENTATION

    o	The reference manual now omits 'internal' help pages.

    o	There is a new help page shown by help("Memory-limits") which
	documents the current design limitations on large objects.

    o	The format of the LaTeX version of the documentation has
	changed.  The old format is still accepted, but only the new
	resolves cross-references to object names containing _, for
	example.

    o	HTML help pages now contain a reference to the package and
	version in the footer, and HTML package index pages give their
	name and version at the top.

    o	All manuals in the 2.x series have new ISBN numbers.

    o	The 'R Data Import/Export' manual has been revised and has a
	new chapter on `Reading Excel spreadsheets'.


C-LEVEL FACILITIES

    o	The PACKAGE argument for .C/.Call/.Fortran/.External can be
	omitted if the call is within code within a package with a
	namespace.  This ensures that the native routine being called
	is found in the DLL of the correct version of the package if
	multiple versions of a package are loaded in the R session.
	Using a namespace and omitting the PACKAGE argument is
	currently the only way to ensure that the correct version is
	used.

    o	The header Rmath.h contains a definition for R_VERSION_STRING
	which can be used to track different versions of R and libRmath.

    o	The Makefile in src/nmath/standalone now has 'install' and
	'uninstall' targets -- see the README file in that directory.

    o	More of the header files, including Rinternals.h, Rdefines.h and
	Rversion.h, are now suitable for calling directly from C++.


DEPRECATED & DEFUNCT
